fixed alignment issue with forecast, fixed bug in conversion

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -39,7 +39,7 @@
 }
 
 #icon {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
   display: block;
 }
