--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,4 +1,5 @@
 .weather-forecast{
-    display: block;
     margin: 0 auto;
+    text-align: center;
+    padding-top: 20px;
 }
